--- a/Animated Eyes Follow Mouse Cursor in JavaScript.html
+++ b/Animated Eyes Follow Mouse Cursor in JavaScript.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title> Animated Eyes </title>
   <style media="screen">
   @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
